feat: partition/MV maintenance, and make the stack actually run
Maintenance (the gap that had a calendar deadline)
- rolling monthly partitions with configurable lookahead, advisory-locked
  with try-lock-and-skip so N cobalt replicas cannot pile up, run once
  synchronously at boot then on a schedule. A fresh deployment months
  after the migration was written no longer lands in DEFAULT.
- the DEFAULT-partition trap is detected rather than assumed away:
  Postgres REFUSES to create an overlapping partition while matching rows
  sit in DEFAULT, so the job surveys DEFAULT first, splits wanted months
  into creatable and blocked before issuing DDL, and emits the remedy.
  The IT executes that generated remedy and asserts it attaches the month
  and moves the rows.
- retention DETACHES rather than drops; destroying event data stays an
  operator decision. Detach cannot be CONCURRENTLY while a DEFAULT
  partition exists, so it runs in its own transaction with SET LOCAL
  lock_timeout — a session-level SET would leak back into the Hikari pool.
- REFRESH MATERIALIZED VIEW CONCURRENTLY, falling back to the blocking
  form once when the view has never been populated.
- partition.default.rows existed in the shared vocabulary and the ADR
  described alerting on it, but nothing had ever produced it. Now fed.

The stack had never run, and did not survive its first `up -d`
- ferrite:latest never existed: no packagingSettings, so dockerUpdateLatest
  was off and it inherited the Ubuntu-based temurin default rather than
  the alpine base every other service uses.
- postgres never started: `-c=shared_buffers=512MB` parses as a setting
  named "", so it crash-looped, which blocked cobalt and ferrite behind an
  unhealthy dependency.
- ferrite could not boot: play.filters.hosts.allowed is typed as a LIST and
  a HOCON env substitution is always a STRING. This passes every
  development run and fails every deployment. Now one comma-separated var
  split in code.
- Prometheus could not