@@ -20,7 +20,7 @@ One `deploy/docker-compose.yml` brings up the whole stack on a single host.
 | `ferrite` | `ferrite:latest` | `9000 -> 9000` | Play 3 web UI and search. Reads Postgres. Never sees Kafka. |
 | `otel-collector` | `otel/opentelemetry-collector-contrib:0.157.0` | — | OTLP/gRPC on `:4317`, OTLP/HTTP on `:4318`. Traces only. |
 | `prometheus` | `prom/prometheus:v3.13.1` | `9090` | Scrapes `/metrics` off all three services every 15 s, 30 d retention. |
-| `grafana` | `grafana/grafana:13.1.1` | `3000` | Prometheus provisioned as the default datasource. |
+| `grafana` | `grafana/grafana:13.1.1` | `3000` | Prometheus provisioned as the default datasource, plus the **Event observatory** dashboard (§5.2). |
 
 Topics (`kafka-init`, and `io.kzonix.kernel.event.Topics`):
 
@@ -39,8 +39,9 @@ extracted by the consumer, so one trace spans HTTP → Kafka → database.
 Images are built by sbt, not by compose.
 
 ```bash
-sbt cobalt/Docker/publishLocal wolfram/Docker/publishLocal
-# ferrite: see Known limitations — the ferrite project does not currently enable DockerPlugin.
+# One quoted argument each, or a ";a;b;c" sequence. sbt 2 does NOT split a single
+# space-joined string: `sbt "a b c"` fails to parse.
+sbt ";ferrite/Docker/publishLocal;cobalt/Docker/publishLocal;wolfram/Docker/publishLocal"
 
 cd deploy
 cp .env.example .env      # then edit; .env is gitignored
@@ -79,10 +80,18 @@ curl -fsS -X POST localhost:8081/events \
 
 Prometheus targets: <http://localhost:9090/targets> — all three `observatory` targets must be `UP`.
 
+JVM flags are baked into each image's `conf/application.ini` by `containerJvmOptions` in `build.sbt`: 70 % of the
+container memory limit as heap (the JVM's container default of 25 % left three quarters of the budget unusable) and
+G1 (ergonomics selects **Serial** below 1792 MB, which every one of these containers is). Verify after a base-image
+bump with `docker exec observatory-wolfram-1 java -XX:+PrintFlagsFinal -version | grep -w MaxHeapSize` and by
+checking that `jvm_memory_max_bytes` reports `G1 Eden Space` rather than `Eden Space`. Note that
+`conf/application.ini` is spliced straight onto the `java` command line and the start script strips `-J` **only**
+from `-X`/`-XX` options — so a `-J--enable-native-access=…` there kills the container at boot.
+
 ### Rolling a new build
 
 ```bash
-sbt cobalt/Docker/publishLocal wolfram/Docker/publishLocal
+sbt ";cobalt/Docker/publishLocal;wolfram/Docker/publishLocal"
 cd deploy && docker compose up -d cobalt wolfram
 ```
 
@@ -109,9 +118,9 @@ Optional, with compose defaults:
 
 | Variable | Default | Notes |
 | --- | --- | --- |
-| `POSTGRES_DB` | `observatory` | Also interpolated into `DB_URL` for cobalt and ferrite. |
+| `POSTGRES_DB` | `observatory` | Also interpolated into `DATABASE_URL` for cobalt and ferrite. |
 | `POSTGRES_USER` | `observatory` | |
-| `ALLOWED_HOSTS` | `localhost,127.0.0.1` | Play's allowed-hosts filter. **See Known limitations — the comma-separated form does not work.** |
+| `ALLOWED_HOSTS` | `localhost,127.0.0.1` | Play's allowed-hosts filter. Comma-separated; split by `io.kzonix.ferrite.wiring.AllowedHosts`. Compose appends `ferrite` so Prometheus can scrape `http://ferrite:9000/metrics` — without it the filter answers 400 and that target stays DOWN. |
 | `OTEL_EXPORTER_OTLP_ENDPOINT` | `http://otel-collector:4317` | |
 | `OTEL_TRACES_SAMPLER` | `parentbased_traceidratio` | |
 | `OTEL_TRACES_SAMPLER_ARG` | `0.1` | 10 % of traces. |
@@ -126,7 +135,7 @@ configured at deploy time and never rebuilt for an environment change. `applicat
 
 | Variable | Default | Effect |
 | --- | --- | --- |
-| `SERVICE_VERSION` | `0.0.0-unknown` | The `version` tag on every meter and the `service.version` resource attribute. Not set by compose today; set it to the image tag to make a rollout visible in dashboards. |
+| `SERVICE_VERSION` | `0.0.0-unknown` | The `version` tag on every meter and the `service.version` resource attribute. Compose passes it from `.env` (default `0.1.0-SNAPSHOT`); keep it in step with the image tag so a rollout is visible in dashboards. |
 | `HOSTNAME` | container id | `service.instance.id` on spans. Docker sets it; nothing else needs wiring. |
 | `OTEL_SERVICE_NAME` | the service's own name | Set per service in compose. Overriding it to something else makes traces and metrics disagree — don't. |
 | `OTEL_EXPORTER_OTLP_ENDPOINT` / `_PROTOCOL` | `http://otel-collector:4317` / `grpc` | The SDK is autoconfigured; gRPC is forced by `modules/observability`. |
@@ -181,7 +190,7 @@ process stays *live* while consuming nothing — which is precisely why lag is m
 | Variable | Default | Effect |
 | --- | --- | --- |
 | `APPLICATION_SECRET` | a development-only literal | Mandatory outside development. |
-| `ALLOWED_HOSTS` | `["localhost","127.0.0.1",".local"]` | Allowed-hosts filter. See Known limitations. |
+| `ALLOWED_HOSTS` | `localhost,127.0.0.1,.local` | Allowed-hosts filter. A **comma-separated string**, split by `io.kzonix.ferrite.wiring.AllowedHosts` — Play's own `play.filters.hosts.allowed` list key cannot be fed from the environment. An empty value fails the boot rather than rejecting every request. |
 | `PLAY_HTTP_PORT` | `9000` | Play's own variable (`play.server.http.port`). |
 | `PLAY_HTTP_ADDRESS` | `0.0.0.0` | |
 
@@ -192,9 +201,6 @@ process stays *live* while consuming nothing — which is precisely why lag is m
 | `DATABASE_URL` | `jdbc:postgresql://localhost:5432/observatory` | JDBC URL. |
 | `DATABASE_USER` | `observatory` | |
 | `DATABASE_PASSWORD` | *(empty)* | |
-
-> **`deploy/docker-compose.yml` sets `DB_URL`, `DB_USER` and `DB_PASSWORD`, which nothing reads.** See
-> [Known limitations](#8-known-limitations). Until that is fixed, override with `DATABASE_*`.
 
 Pool sizes are configuration, not environment: read pool 8 connections with a server-side
 `SET statement_timeout = '2s'` and `read-only = true`; write pool 6 connections. Each pool's size must equal the
@@ -243,10 +249,32 @@ not from the exposition.
 | `http_server_requests_seconds{uri,outcome,…}` | all three | The one HTTP timer. Tagged by matched route template, never raw path; the `uri` tag is capped at 100 distinct values. |
 | `jvm_*`, `process_*`, `system_*` | all three | The standard binders, including `VirtualThreadMetrics` on JDK 25. |
 
+### 5.1 There are no histogram buckets — do not write `histogram_quantile`
+
+Micrometer publishes a timer to Prometheus as a **summary**: `_count`, `_sum` and a decaying `_max`. Nothing in
+`modules/observability` enables `publishPercentileHistogram`, so there is not a single `_bucket` series in the
+exposition and `histogram_quantile(…_bucket)` silently returns nothing — an empty panel, not an error. Verified by
+scraping `/metrics`.
+
+What these meters can answer is the mean over an interval and the interval max:
+
+```promql
+# mean latency
+sum(rate(consume_batch_latency_seconds_sum[5m]))
+  / clamp_min(sum(rate(consume_batch_latency_seconds_count[5m])), 0.001)
+
+# worst observation Micrometer is still carrying (a ~2-minute decaying window)
+max(consume_batch_latency_seconds_max)
+```
+
+`clamp_min` is not decoration: without it the ratio is `0/0` whenever traffic stops, and the panel goes to `NaN`
+rather than to zero. Adding real quantiles means enabling percentile histograms in `Telemetry`, which multiplies
+the series count for every timer in the fleet — a decision, not an omission.
+
 Useful expressions:
 
 ```promql
-# ingest throughput and rejection ratio
+# ingest throughput and rejections by reason
 sum(rate(ingest_events_received_total[5m]))
 sum by (reason) (rate(ingest_events_rejected_total[5m]))
 
@@ -255,20 +283,55 @@ sum by (group) (consume_group_lag)
 deriv(sum(consume_group_lag)[15m:])            # > 0 sustained = falling behind
 
 # write path health
-histogram_quantile(0.99, sum by (le) (rate(consume_batch_latency_seconds_bucket[5m])))
 sum by (reason) (rate(consume_records_poison_total[15m]))   # alert on > 0 for 15m
+max by (outcome) (consume_batch_latency_seconds_max)
 
-# ingest durability
+# ingest durability — there is no separate produce-error counter
 sum by (outcome) (rate(kafka_produce_latency_seconds_count[5m]))
 
 # UI latency (search has no dedicated timer today — see Known limitations)
-histogram_quantile(0.95,
-  sum by (le) (rate(http_server_requests_seconds_bucket{service="ferrite",uri="/events"}[5m])))
+sum by (uri) (rate(http_server_requests_seconds_sum{service="ferrite",uri=~"/events.*"}[5m]))
+  / clamp_min(sum by (uri) (rate(http_server_requests_seconds_count{service="ferrite",uri=~"/events.*"}[5m])), 0.001)
+
+# partition headroom — the leading indicator for the worst failure mode here
+min(maintenance_partitions_headroom)            # alert below 2
+sum(partition_default_rows)                     # alert above 0
 ```
 
 Suggested alerts: `consume_group_lag` above a threshold for 10 minutes; any `consume_records_poison_total`
 increase over 15 minutes; `kafka_produce_latency_seconds_count{outcome="failure"} > 0`; readiness probe failing
 on any service for 5 minutes; `up{job="observatory"} == 0`; and — see §7 — partition headroom.
+
+### 5.2 The provisioned dashboard
+
+`deploy/observability/dashboards/observatory.json` is provisioned into Grafana's **Observatory** folder as
+*Event observatory*, by `deploy/observability/grafana-dashboards.yml`. It is a file in this repository, not an
+object in Grafana's database: the `grafana-data` volume can be destroyed without losing it.
+
+Five rows, in the order an incident is actually worked:
+
+| Row | Panels |
+| --- | --- |
+| **Fleet** | Ingest rate, rejection rate, total consumer lag, dead-letter rate, partition headroom, targets up. |
+| **Ingest — wolfram** | Accepted events by `type`, rejections by `reason`, produce latency (mean and max) and produce outcomes. |
+| **Consume — cobalt** | Lag per partition, batch write latency, persisted vs de-duplicated rows, dead letters by reason, batch size against the cap, and the scheduled-maintenance job outcomes. |
+| **Search and HTTP** | ferrite's `/events` latency, and request rate by service and outcome. |
+| **JVM health** | Heap used vs max, GC pause and overhead, CPU, threads (platform and virtual), allocation rate and uptime — all grouped by `service`, so one row covers all three. |
+
+Every panel is written against the shared meter names in `modules/observability`'s `Meters`, so a panel that is
+blank for one service means that service is not emitting, never that the panel is spelled for a different one.
+
+Two things about it that are load-bearing:
+
+- **The datasource is referenced by `uid: observatory-prometheus`**, pinned in `grafana-datasources.yml`. Left to
+  Grafana to generate, the uid differs per install and every panel comes up "Datasource not found".
+- **The provider config and the dashboards are in different directories.** Grafana parses everything under the
+  provider's `options.path` as a dashboard, so a provider YAML living beside them is read as one and fails on
+  every boot. That is why compose mounts the config to `/etc/grafana/provisioning/dashboards/` and the JSON to
+  `/var/lib/grafana/dashboards/`.
+
+Provisioned dashboards are read-only in the UI (`allowUiUpdates: false`), deliberately: an edit saved in the
+browser is reverted by the next provisioning sweep and the person who made it gets no warning. Edit the JSON.
 
 ---
 
@@ -313,15 +376,16 @@ Symptom: `sum(consume_group_lag)` rising.
    The write pool is 6 connections by design; raising it adds lock contention on the same partitions rather than
    throughput.
 4. **Missing partition.** `no partition of relation "cloud_event" found for row` in cobalt's logs is the single
-   most damaging failure mode of a partitioned design. `V1__events.sql` ships partitions only for **2026-07** and
-   **2026-08**, and no job creates more (see Known limitations). Postgres reports this as SQLSTATE 23514, which
-   cobalt classifies as a *data* error — so it does not stall, it **dead-letters every affected event**. Create
-   the next months now (§7.3).
+   most damaging failure mode of a partitioned design: Postgres reports it as SQLSTATE 23514, which cobalt
+   classifies as a *data* error — so the pipeline does not stall, it **dead-letters every affected event** at full
+   throughput. cobalt's partition-maintenance job creates months ahead every six hours, so reaching this state
+   means the job stopped or was blocked; `maintenance_partitions_headroom` and
+   `maintenance_job_duration_seconds_count{job="partition-maintenance"}` say which. See §7.3.
 5. **Scale.** The topic has 12 partitions, so up to 12 cobalt replicas can share the work. `docker compose up -d
    --scale cobalt=3` requires removing cobalt's fixed `8082:8080` host mapping first — a fixed published port
    makes a second replica fail to start. Beyond 12 replicas, add partitions. Raising `CONSUMER_BATCH_SIZE` helps
    only when batches are already at the cap.
-6. **Backlog burn-down is safe.** Offsets are committed only after a durable write, and the write deduplicates on
+2. **Backlog burn-down is safe.** Offsets are committed only after a durable write, and the write deduplicates on
    `(occurred_at, ce_source, ce_id)`, so replay never duplicates rows — `consume_records_duplicate_total` simply
    rises.
 
@@ -356,7 +420,8 @@ Symptom: `rate(consume_records_poison_total[15m]) > 0`.
 
 ### 6.4 Search is slow
 
-1. **Confirm it is the database.** `histogram_quantile(0.95, …{service="ferrite",uri="/events"})`. The read pool
+1. **Confirm it is the database.** The mean-latency expression in §5.1 for `{service="ferrite",uri="/events"}`,
+   or the *Search latency* panel. The read pool
    sets `statement_timeout = '2s'` server-side, so a genuinely runaway query surfaces as a failed page within two
    seconds rather than as a hang — if pages hang longer than that, the wait is for a *connection*, not a query.
 2. **Pool saturation.** Read pool: 8 connections, `connection-timeout` 3 s, fronted by an 8-thread dispatcher.
@@ -389,9 +454,10 @@ Symptom: `rate(consume_records_poison_total[15m]) > 0`.
 | `prometheus-data` | 30 days of metrics. | Dashboards lose history; nothing else breaks. |
 | `grafana-data` | Dashboards, users. | Re-provision. |
 
-> The `kafka` service mounts `kafka-data:/var/lib/kafka/data` but does **not** set `KAFKA_LOG_DIRS`, and the
-> `apache/kafka` image defaults to `/tmp/kraft-combined-logs`. As deployed, the Kafka log is therefore *not* on
-> the volume: a container recreate discards the log and the consumer offsets. See Known limitations.
+> `KAFKA_LOG_DIRS: /var/lib/kafka/data` must stay set on the `kafka` service. The `apache/kafka` image defaults
+> to `/tmp/kraft-combined-logs`, which is *inside the container*: without the variable the `kafka-data` volume is
+> mounted and never written to, and a container recreate discards the log and the committed consumer offsets.
+> Verify with `docker compose up -d --force-recreate kafka` — the topics and the group's offsets must survive.
 
 ### 7.2 Backup
 
@@ -431,9 +497,25 @@ ALTER TABLE events.cloud_event DETACH PARTITION events.cloud_event_2025_07;
 DROP TABLE events.cloud_event_2025_07;          -- or keep it detached as an archive
 ```
 
-**Creating future partitions is a standing operational task** — nothing in the running system does it. Keep at
-least three months of headroom, and repeat the autovacuum settings on every new partition (they are *not*
-inherited, and the newest partition is the only one being written to):
+**Creating future partitions is cobalt's job, not yours.** `MaintenanceJobs` runs `PartitionMaintenance` every
+`MAINTENANCE_PARTITION_INTERVAL` (6 hours) behind an advisory lock, creating the current month and
+`MAINTENANCE_MONTHS_AHEAD` (3) beyond it with the same autovacuum settings the migration applies, and detaching
+past `MAINTENANCE_RETAIN_MONTHS` when — and only when — that is configured. `V1__events.sql` still ships only
+2026-07 and 2026-08; the job supplies the rest on first run.
+
+| Variable | Default | Effect |
+| --- | --- | --- |
+| `MAINTENANCE_ENABLED` | `true` | The escape hatch for a deployment whose partitions are managed elsewhere. |
+| `MAINTENANCE_MONTHS_AHEAD` | `3` | Months of headroom, so the job may miss three consecutive runs before an event has nowhere to go. |
+| `MAINTENANCE_RETAIN_MONTHS` | *(unset)* | Retention, counting back from and including the current month. Unset means **never detach** — the one operation here that makes data vanish from queries happens because somebody configured it. |
+| `MAINTENANCE_PARTITION_INTERVAL` | `6 hours` | How often the calendar is re-checked. |
+| `MAINTENANCE_REFRESH_INTERVAL` | `5 minutes` | Rollup refresh period. |
+| `MAINTENANCE_DETACH_LOCK_TIMEOUT` | `5 seconds` | Bound on waiting for `ACCESS EXCLUSIVE` during a detach. Waiting is the dangerous part: every ingest insert queues behind the waiter, so the job gives up and retries next pass. |
+
+Watch `maintenance_partitions_headroom` (alert below **2**) and
+`maintenance_job_duration_seconds_count{job="partition-maintenance"}` (alert on *no* run, which is the only trace
+a dead job thread leaves). Doing it by hand is still the fallback if the job is disabled — the autovacuum settings
+are *not* inherited, and the newest partition is the only one being written to:
 
 ```sql
 CREATE TABLE events.cloud_event_2026_09 PARTITION OF events.cloud_event
@@ -452,8 +534,11 @@ SELECT count(*) FROM events.cloud_event_default;   -- must be 0
 ```
 
 Once it holds rows, creating an overlapping partition takes `ACCESS EXCLUSIVE` on the hierarchy and scans it, so
-the empty-check is the cheap moment to act. The `partition.default.rows` gauge exists in the metric vocabulary
-for exactly this alert but is not emitted yet — poll it with SQL until it is.
+the empty-check is the cheap moment to act. cobalt emits `partition_default_rows` for exactly this alert, and
+`maintenance_partitions_blocked` counts the months whose partition it *could not* create for this reason — a
+non-zero value there is a request for a human, and the job has already logged the exact statements to run, with
+the actual bounds, for the actual table. Moving those rows is an exclusive-lock operation no unattended job
+should take on an operator's behalf.
 
 Kafka retention is `KAFKA_LOG_RETENTION_HOURS=168` (7 days) for both topics: the bus is a buffer, not an archive.
 Prometheus keeps 30 days (`--storage.tsdb.retention.time=30d`).
@@ -468,55 +553,57 @@ hierarchy. On a live system: `CREATE INDEX ON ONLY parent`, then `CREATE INDEX C
 
 ## 8. Known limitations
 
-These are real, current, and each one has bitten or will bite. Ordered by operational blast radius.
+Each entry below was re-checked against the code and `deploy/` on the date of the last commit to this file, and
+each one is still true. **That check is the point of the list.** An entry that has been fixed and left in place
+does more damage than no list at all: it makes the entries that *are* real look equally doubtful, and the next
+person triaging an incident wastes their first ten minutes ruling out a defect that no longer exists. If you fix
+one, delete it here in the same change.
 
-1. **The database environment variables in compose are the wrong names.** `docker-compose.yml` passes `DB_URL`,
-   `DB_USER` and `DB_PASSWORD` to cobalt and ferrite; `modules/persistence/src/main/resources/reference.conf`
-   reads `DATABASE_URL`, `DATABASE_USER` and `DATABASE_PASSWORD`. As written, both services fall back to
-   `jdbc:postgresql://localhost:5432/observatory` with an empty password and fail to open their pools at boot.
-   *Workaround:* add `DATABASE_URL`/`DATABASE_USER`/`DATABASE_PASSWORD` to those two services' `environment:`
-   blocks (or export them in `.env` and reference them) until the file is fixed.
-2. **`KAFKA_LOG_DIRS` is not set**, so the broker writes to `/tmp/kraft-combined-logs` inside the container while
-   the `kafka-data` volume sits unused at `/var/lib/kafka/data`. Every recreate of the Kafka container discards
-   un-consumed events *and* the committed offsets. *Workaround:* set
-   `KAFKA_LOG_DIRS: /var/lib/kafka/data` on the `kafka` service before the first production write.
-3. **`ALLOWED_HOSTS` as a comma-separated string does not work.** Play reads `play.filters.hosts.allowed` as a
-   string *list*, and a HOCON environment substitution always yields a string — `getStringList` then fails with a
-   wrong-type error at boot. *Workaround:* pass the list as indexed system properties, which Lightbend Config
-   converts back into a list: `JAVA_OPTS=-Dplay.filters.hosts.allowed.0=localhost
-   -Dplay.filters.hosts.allowed.1=observatory.home.arpa`.
-4. **ferrite has no container image.** The `ferrite` project enables `PlayScala` but not `DockerPlugin` (which is
-   `noTrigger`), so `sbt ferrite/Docker/publishLocal` has no such task and compose's `ferrite:latest` cannot be
-   produced. ADR §10.1 records the fix (add `DockerPlugin` + the shared `packagingSettings`, plus
-   `-Dpidfile.path=/dev/null`, and `AshScriptPlugin` because the Alpine JRE base image has no bash).
-5. **No partition-maintenance job exists.** `V1__events.sql` creates 2026-07 and 2026-08 only. When the last
-   partition's month ends, inserts fail with SQLSTATE 23514, which cobalt classifies as a data error — so events
-   are **dead-lettered, not retried**, and the DLQ's 7-day retention starts running against them. Create
-   partitions ahead of time (§7.3) and alert on headroom.
-6. **Single-node Kafka, replication factor 1, is not highly available.** One broker, `KRaft` combined
+Ordered by operational blast radius.
+
+1. **Single-node Kafka, replication factor 1, is not highly available.** One broker, `KRaft` combined
    broker+controller, `RF=1` on both topics and on the internal offsets/transaction-state topics. There is no
    redundancy: broker downtime is ingestion downtime, and loss of the log is loss of everything not yet consumed.
    The `acks=all` + idempotent producer settings are honest but only ever wait for one replica. Suitable for a
    homelab; a production deployment needs three brokers and `RF=3` with `min.insync.replicas=2`.
-7. **Play is on a milestone release.** `3.1.0-M9` is the only Play line cross-published for sbt 2; the stable
+2. **Play is on a milestone release.** `3.1.0-M9` is the only Play line cross-published for sbt 2; the stable
    3.0.x line ships an sbt 1 plugin only. Test-kit and server APIs can shift between milestones, and there is no
    security-support commitment for a milestone. Pin every Play artifact to one version and bump them together;
    do not "fix" the version without accepting the loss of sbt 2.
-8. **Several declared metrics are never emitted:** `search.query.duration`, `search.facets.capped`,
-   `event.unrecognised`, `partition.default.rows`, and Hikari's `db.pool.*` binding (the pools are built without
-   a `MetricsTrackerFactory`). Dashboards written against ADR §7.1's minimum set will have blank panels. Use
-   `http_server_requests` for search latency and SQL for the default-partition count.
-9. **`SERVICE_VERSION` is not set by compose**, so every meter is tagged `version="0.0.0-unknown"` and rollouts
-   are invisible in dashboards. Set it to the image tag in `.env` and pass it through.
-10. **The hourly rollup is created and never used.** `events.event_rollup_hourly` is populated once by the
-    migration; the histogram queries the fact table directly and nothing refreshes the view. Harmless today —
-    but do not build a dashboard on the view assuming it is current.
-11. **Compose omits the hardening and tuning ADR §10.2 calls for:** no `security_opt: [no-new-privileges:true]`,
-    no `pg_stat_statements`/`track_io_timing`/`log_min_duration_statement` on Postgres, no `postgres-exporter`.
-    None is required to run; all are cheap to add and the first slow-query investigation will want
-    `pg_stat_statements`.
-12. **Traces go to the collector's `debug` exporter only** — they are logged and dropped. Point
-    `otel-collector.yaml`'s traces pipeline at Tempo or Jaeger before you need to read one.
+3. **Timers have no percentile histograms, so no quantiles exist.** `publishPercentileHistogram` is not enabled
+   anywhere in `modules/observability`, so every Micrometer timer reaches Prometheus as a summary and there is not
+   one `_bucket` series in the exposition. `histogram_quantile` returns nothing, quietly. §5.1 has the expressions
+   that do work, and the provisioned dashboard uses them. Enabling buckets is a real decision — it multiplies the
+   series count for every timer in the fleet — not an oversight to be corrected in passing.
+4. **Three declared metrics are never emitted:** `search.query.duration`, `search.facets.capped` and
+   `event.unrecognised`; so is Hikari's `db.pool.*` binding, because the pools are built without a
+   `MetricsTrackerFactory`. Confirmed by scraping `/metrics`. Use `http_server_requests` for search latency
+   (§5.1). Everything else in the vocabulary **is** emitted, including `partition.default.rows`,
+   `maintenance.partitions.headroom` and `maintenance.partitions.blocked`.
+5. **The hourly rollup is created, refreshed, and read by nothing.** `events.event_rollup_hourly` is populated by
+   the migration and kept current by `RollupRefresh` on cobalt's maintenance schedule
+   (`maintenance_job_duration_seconds{job="rollup-refresh"}` increments), but ferrite's histogram queries the fact
+   table directly. It is a standing cost with no reader: either wire it into the histogram query or drop it.
+6. **Compose omits the hardening and tuning ADR §10.2 calls for:** no `security_opt: [no-new-privileges:true]`,
+   no `pg_stat_statements`/`track_io_timing`/`log_min_duration_statement` on Postgres, no `postgres-exporter`.
+   None is required to run; all are cheap to add and the first slow-query investigation will want
+   `pg_stat_statements`.
+7. **Traces go to the collector's `debug` exporter only** — they are logged and dropped. The pipeline is live (a
+   single smoke event produces `resource spans: 2, spans: 3`, so HTTP → Kafka → consumer is one trace), but point
+   `otel-collector.yaml` at Tempo or Jaeger before you need to *read* one.
+8. **ferrite ships `logback.xml` twice** — once inside `io.kzonix.ferrite-*.jar` and once at `conf/logback.xml`,
+   because Play's packaging maps `src/main/resources` into both. Verified in the staged image. Logback logs a
+   `Resource [logback.xml] occurs multiple times` WARN on boot and uses the `conf/` copy. Both copies are the same
+   file, so the outcome is deterministic; it is noise, not a defect, but it will confuse the first person who
+   greps for it.
+9. **ferrite's stylesheet is committed output and the build does not verify it.** `sbt ferrite/tailwindCheck`
+   exists and catches drift, but it needs the Tailwind CLI binary and is therefore not part of `verify`, which
+   must stay runnable with nothing but a JDK. A template that gains a utility class in a change where nobody ran
+   the task ships a page that renders without it. See `docs/development.md` §8.
+
+Fixed, and no longer listed: `deploy/.env.example` (present), ferrite's `DockerPlugin` (enabled, so
+`ferrite:latest` builds), compose's database variables (`DATABASE_URL`/`DATABASE_USER`/`DATABASE_PASSWORD`,
+matching what the services read), and the absence of a partition-maintenance job (cobalt runs one — §7.3).
 
 ---
 
